[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 8, 9 )
speed = 50

[connection signal="creat_bullet_3" from="Player" to="." method="_on_Player_creat_bullet_3"]
[connection signal="create_bullet" from="Player" to="." method="_on_Player_create_bullet"]
[connection signal="create_bullet_2" from="Player" to="." method="_on_Player_create_bullet_2"]
